Bug 143158 - Can't copy text in chat window after copying text of the conversation
Summary: Can't copy text in chat window after copying text of the conversation
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chat Window (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-03-18 13:22 UTC by Alberto Torres Ruiz
Modified: 2007-12-28 15:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krichtexteditpart.cpp.diff (1.40 KB, patch)
2007-10-02 17:13 UTC, Dennis Nienhüser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alberto Torres Ruiz 2007-03-18 13:22:45 UTC
Version:           0.12.4 (using KDE 3.5.6, Kubuntu (edgy) 4:3.5.6-0ubuntu1~edgy1)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.17-10-generic

1. Copy some text from the conversation, using ctrl+c shortcut
2. Write something in the chat textbox and try to copy it with ctrl+c: won't work

The ctrl+c seems to always copy the chat window even if the focus is in the chat textbox.

Altough I use the selection clipboard a lot, sometimes I need to use the ctrl+c/v one.
Comment 1 Jorge S. de Lis 2007-03-18 13:26:11 UTC
It's truth for me too. It's a bit annoying.
Comment 2 Dennis Nienhüser 2007-10-02 17:13:03 UTC
Created attachment 21739 [details]
krichtexteditpart.cpp.diff

The chat window uses a custom rich text edit that circumvents the KDE/QT
shortcut handling to be able to use the enter key as a shortcut for sending
messages. Unfortunately the copy shortcut gets filtered as well, leading to the
results you described. The patch attached (against kde 4 svn) limits the
shortcut overriding to the enter key only, other shortcuts like copying are
handled by KDE/QT so that copying from a chat window via shortcuts works again.
Comment 3 Roman Jarosz 2007-12-28 15:12:59 UTC
The attached patch is in trunk and I also can confirm that this bug is fixed in trunk.