Fix bug 143158.

This patch from Dennis Nienhüser fixes the copy and paste from the chatwindow
text edit.

Thanks for the patch!
CCMAIL: earthwings@gentoo.org
BUG: 143158

svn path=/trunk/KDE/kdenetwork/kopete/; revision=721274